sla configuration table made editable

--- a/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/side-nav-bar/side-nav-bar.component.html
@@ -10,7 +10,7 @@
       <!--<li class="sidelist"><a [routerLink]="['/manage']" >Manage</a></li>-->
       <!--<li class="sidelist"><a [routerLink]="['/recouncile']">Reconcile</a></li>-->
       <li class="sidelist"><a [routerLink]="['/sessions']">Session & Messages</a></li>
-      <li class="sidelist"><a [routerLink]="['/slamesssages']">SLA Messages</a></li>
+      <li class="sidelist"><a [routerLink]="['/slamessages']">SLA Messages</a></li>
       <li class="sidelist"><a [routerLink]="['/slaconfiguration']">SLA Configuration</a></li>
       <li class="sidelist"><a [routerLink]="['/clientcount']" >Client Count Graph</a></li>
 
