--- a/src/app/Components/sla-messags/sla-messags.component.html
+++ b/src/app/Components/sla-messags/sla-messags.component.html
@@ -37,7 +37,7 @@
 
     <!-- Response Time Column -->
     <ng-container matColumnDef="responseTime">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Response Time </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Response Time (ms) </mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.responseTime}} </mat-cell>
     </ng-container>
 
